# AzurOrchistrator

./: .copilot-instructions.md  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  COMPARISON_REPORT.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yaml
azl_bot/: __init__.py
azl_bot/core/: __init__.py  actuator.py  bootstrap.py  capture.py  configs.py  dataset_capture.py  datastore.py  device.py  hashing.py  llm_client.py  loggingx.py  loop.py  ocr.py  planner.py  resolver.py  resolver.py.backup  screens.py
azl_bot/tasks/: __init__.py  __main__.py  commissions.py  currencies.py  daily.py  pickups.py  registry.py
azl_bot/tools/: __init__.py  resolver_harness.py
azl_bot/ui/: __init__.py  app.py  overlays.py  state.py
config/: app.yaml.example
config/selectors/: synonyms.yaml
config/templates/: README.md
docs/: 0831Archetecture.md  ACTUATOR_VERIFICATION_DESIGN.md  ARCHITECTURE.md  GUI_ENHANCEMENTS.md  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  LOOP_IMPLEMENTATION.md  PLANNER_FALLBACK_DESIGN.md  QUICK_REFERENCE.md  TASK_REGISTRY.md
docs/config/: EXAMPLES.md
docs/data/: DATASET_CAPTURE.md
docs/dev/: test_refactor_proposal.md  testingInitialReview.md
docs/reports/: CI_SUMMARY_PROMPT.md  PR_MERGE_REPORT_2025-10-01.md  TEST_CONSOLIDATION_PHASE1_COMPLETE.md
docs/tasks/: README.md
docs/tools/: RESOLVER_HARNESS.md
examples/: resolver_harness_demo.py
scripts/: demo_registry.py  dev_validation.py  launch_genymotion.sh  run_gui.sh  run_task.sh  waydroid_setup.sh
tests/: basic_test.py  test_config_validation.py  test_coordinates.py  test_dataset_capture.py  test_hashing.py  test_llm_client.py  test_registry.py  test_resolver_harness.py  test_state_machine.py  test_template_cache.py  test_ui_enhancements.py
tests/core/: test_hashing.py  test_loop.py
tests/fixtures/: README.md
